# franken_networkx

./: AGENTS.md  FEATURE_PARITY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
artifacts/e2e/schema/v1/: e2e_scenario_matrix_oracle_contract_schema_v1.json
artifacts/e2e/v1/: e2e_scenario_matrix_oracle_contract_v1.json  e2e_scenario_matrix_oracle_contract_v1.md
crates/fnx-algorithms/src/: lib.rs
crates/fnx-classes/src/: digraph.rs  lib.rs
crates/fnx-conformance/src/: lib.rs
crates/fnx-generators/src/: lib.rs
crates/fnx-python/: Cargo.toml
crates/fnx-python/src/: algorithms.rs  digraph.rs  generators.rs  lib.rs  readwrite.rs
python/franken_networkx/: __init__.py  _fnx.pyi  backend.py
python/franken_networkx/drawing/: __init__.py  layout.py  nx_pylab.py
scripts/: capture_oracle_fixtures.py  generate_e2e_scenario_matrix.py
tests/python/: test_benchmarks.py  test_error_messages.py  test_hypothesis.py  test_thread_safety.py
