[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "franken-networkx"
dynamic = ["version"]
requires-python = ">=3.10"
description = "High-performance Rust-backed drop-in replacement for NetworkX"
license = { text = "MIT" }
authors = [
    { name = "FrankenNetworkX Contributors" },
]
keywords = ["graph", "network", "networkx", "rust", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Dicklesworthstone/franken_networkx"
Repository = "https://github.com/Dicklesworthstone/franken_networkx"
Issues = "https://github.com/Dicklesworthstone/franken_networkx/issues"

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
scipy = ["scipy>=1.10"]
test = ["pytest>=7", "hypothesis", "networkx>=3.0"]
all = ["numpy>=1.24", "scipy>=1.10"]

[project.entry-points."networkx.backends"]
franken_networkx = "franken_networkx.backend:BackendInterface"

[tool.maturin]
python-source = "python"
module-name = "franken_networkx._fnx"
manifest-path = "crates/fnx-python/Cargo.toml"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
strip = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "conformance: conformance tests comparing against NetworkX oracle",
]
