[package]
name = "fnx-python"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "PyO3 Python bindings for FrankenNetworkX — a Rust-backed drop-in replacement for NetworkX"

[lib]
name = "_fnx"
crate-type = ["cdylib", "rlib"]

[dependencies]
fnx-classes = { path = "../fnx-classes" }
fnx-algorithms = { path = "../fnx-algorithms" }
fnx-generators = { path = "../fnx-generators" }
fnx-readwrite = { path = "../fnx-readwrite" }
fnx-convert = { path = "../fnx-convert" }
fnx-views = { path = "../fnx-views" }
fnx-runtime = { path = "../fnx-runtime" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
pyo3-log = "0.12"
log = "0.4"

[dev-dependencies]
proptest = "1.10.0"
